--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN=mongodb+srv://MEAN_HOSPITAL:LYVpcGnKYIP0e0uk@cluster0.7eo7i.mongodb.net/hospitalDB
+JWT_SECRET=chapalachalamalapersonaadivinabuenadivinador
