--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3000
 DB_CNN=mongodb+srv://MEAN_HOSPITAL:LYVpcGnKYIP0e0uk@cluster0.7eo7i.mongodb.net/hospitalDB
 JWT_SECRET=chapalachalamalapersonaadivinabuenadivinador
+
+
+GOOGLE_ID = 336467152360-o1sno0tq30qfpjimdc4ck2hnriljrqjr.apps.googleusercontent.com
+GOOGLE_SECRET = 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
